<resources>
    <string name="app_name">Challenge Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="clickme">Click Me</string>
    <string name="logo_description">Challenge Me Logo</string>
    <string name="mail">challengeme@gmail.com</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="players">Players</string>
    <string name="contact">Contact</string>
    <string name="other">Other</string>
    <string name="loading">Loading…</string>
    <string name="facebook_app_id" translatable="false">229492627497328</string>
    <string name="send_mail">Send mail</string>
    <string name="friendlist_description">User Photo</string>
</resources>
